--- a/app/views/dentalnet/index.html.erb
+++ b/app/views/dentalnet/index.html.erb
@@ -1,243 +1,74 @@
 <!--  <p>Hellp World!</p> -->
 <!--  <%= @eva.user_comment %> -->
+<head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="css/main.css">
 
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js"> <!--<![endif]-->
+</head>
 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<header>DENTAL NET</header>
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+<body>
+<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-        <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,300,700,600,500' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700' rel='stylesheet' type='text/css'>
+<div class="container-fluid">
 
+  <div class="row">
+    <div class="col-xs-12 col-space"></div>
+  </div>
 
-        <link rel="stylesheet" href="css/slicknav.css">
-        <link rel="stylesheet" href="css/owl.theme.css">
-        <link rel="stylesheet" href="css/owl.carousel.css">
-        <link rel="stylesheet" href="css/owl.transitions.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/responsive.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+  <div class="row">
+    <div class="col-xs-1"></div>
+    <div class="col-xs-10">
+        <form action="">
+          <input type="text" class="form-control">
+          <input type="submit" value="検索">
+        </form>
+    </div>
+    <div class="col-xs-1"></div>
+  </div>
 
-        <!-- Add your site or application content here -->
-         
-         <!-- header Start
-         ================================================= -->
-        
-        <section id="header">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="block-left">
-              <nav class="navbar navbar-default" role="navigation">
-                <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  </button>
-                  <div class="nav-logo">
-                  <a href="#"><img src="/images/logo.png" alt="logo"></a>
-                  </div>
-                </div>
+  <div class="row">
+    <div class="col-xs-12 col-space"></div>
+  </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <ul class="nav navbar-nav">
-                  <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Screenshot</a></li>
-                  <li><a href="#">Gallery</a></li>
-                  </ul>
-                </div><!-- /.navbar-collapse -->
-                </div><!-- /.container-fluid -->
-              </nav>
-                        </div>
-                    </div><!-- .col-md-6 -->
+  <div class="row">
+    <div class="col-xs-2 col-main"></div>
+    <div class="col-xs-3 col-main" style="background-color: orange;">
+      <i class="fa fa-map-marker fa-3x" aria-hidden="true"></i>
+    </div>
+    <div class="col-xs-2 col-main"></div>
+    <div class="col-xs-3 col-main" style="background-color: orange;">
+      <i class="fa fa-train fa-3x" aria-hidden="true"></i></div>
+    <div class="col-xs-2 col-main"></div>
+  </div>
 
-                    <div class="col-md-6">
-                        <div class="block-right">
-                            <div class="contact-area">
-                                <ul>
-                                    <li><i class="fa fa-phone-square"></i>03-XXXX-XXXX</li>
-                                    <li><i class="fa fa-envelope-o"></i>info@dentalnet.com</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div><!-- .col-md-6 close -->
-                </div><!-- .row close -->
-            </div><!-- .container close -->
-        </section><!-- #heder close -->
+  <div class="row">
+    <div class="col-xs-12 col-space"></div>
+  </div>
 
-        <!-- Slider Start
-        ============================================================== -->
+  <div class="row">
+    <div class="col-xs-2 col-main"></div>
+    <div class="col-xs-3 col-main" style="background-color: orange;">
+      <a href="detail_search">
+      <i class="fa fa-info fa-3x" aria-hidden="true"></i></a>
+    </div>
+    <div class="col-xs-2 col-main"></div>
 
-        <section id="slider">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="block">
-                            <div class="slider-text-area">
-                                <div class="slider-text">
-                                    <h2>あなたの歯医者を見つけましょう！<br></h2> 
-                                    <!--<p class="sub-slider-text">Duis bibendum diam</p>-->
-                                    <p class="slider-p">ネイティブアプリもリリース予定</p>
-                                    <button type="button" class="btn btn-default edit-button-1">準備中</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!-- .col-md-12 close -->
-                </div><!-- .row close -->
-            </div><!-- .container close -->
-        </section><!-- #slider close -->
+    <div class="col-xs-3 col-main" style="background-color: orange;">
+      <i class="fa fa-history fa-3x" aria-hidden="true"></i>
+    </div>
+    <div class="col-xs-2 col-main"></div>
+  </div>
 
-        <!-- Submit Start
-        ======================================================== -->
+ <div class="row">
+    <div class="col-xs-12 col-space"></div>
+  </div>
 
-        <section id="submit-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="block">
-                            <div class="submit-contant">
-                                <div class="submit-header">
-                  <i class="fa fa-search"></i>
-                                    <h3>キーワードで検索</h3>
-                                </div>
-                <div class="submit-area">
-                  <div class="submit-bottom">
-                    <form action="">
-                      <input type="text" placeholder="医院、路線名など">
-                      <input type="submit" value="検索">
-                    </form>
-                  </div>
-                </div>
-                            </div>
-                        </div>
-                    </div><!-- .col-md-12 -->
-                </div><!-- .row close -->
-            </div><!-- .container close -->
-        </section><!-- #submit close -->
+</div>
+</body>
 
-
-        <!-- Service Start 
-        ============================================================= -->
-
-        <section id="service">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="block-top">
-                            <!--<div class="service-header">
-                                <h1>Heading Feature title goes here</h1>
-                                <p>Duis bibendum diam non erat facilaisis tincidunt. Fusce leo neque, lacinia at tempor vitae, porta at arcu. <br /> Vestibulum varius non dui at pulvinar. Ut egestas orci in quam sollicitudin aliquet.</p>
-                                </div>-->
-                        </div>
-                    </div><!-- .col-md-12 close -->
-                </div><!-- row close -->
-        <div class="row">
-          <div class="col-md-12">
-            <div class="block-bottom">
-              <div class="service-tab">
-                  <!-- Nav tabs -->
-                  <ul class="badhon-tab" role="tablist">
-                  <li class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">
-                  <i class="fa fa-map-marker"></i>
-                  現在位置から探す
-                  </a></li>
-                  <li><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">
-                  <i class="fa fa-train"></i>
-                  エリア・駅から探す
-                  </a></li>
-                  <li><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">
-                  <i class="fa fa-info"></i>
-                  詳細条件で検索
-                  </a></li>
-                  <li><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">
-                  <i class="fa fa-history"></i>
-                  履歴を見る
-                  </a></li>
-                  </ul>
-
-                  <!-- Tab panes -->
-
-
-
-
-
-        <!-- footer Start
-        ====================================================================== -->
-
-        <section id="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="block">
-                            <div class="footer-contant">
-                                <h3>ソーシャルで共有</h3>
-                                <div class="social-icon">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-tumblr"></i></a>
-                                    <a href="#"><i class="fa fa-google"></i></a>
-                                    <a href="#"><i class="fa fa-flickr"></i></a>
-                                    <a href="#"><i class="fa fa-youtube"></i></a>
-                                </div>
-                                <div class="support-link">
-                                    <ul>
-                                        <li><a href="#">Contact</a></li>
-                                        <li><a href="#">Twitter</a></li>
-                                        <li><a href="#">Press</a></li>
-                                        <li><a href="#">Support</a></li>
-                                        <li><a href="#">Developers</a></li>
-                                        <li><a href="#">Privacy</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!-- col-md-12 -->
-                </div><!-- .row -->
-            </div><!-- .container -->
-        </section><!-- #footer -->
-
-
-
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/owl.carousel.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
-    </body>
-</html>
+<footer style="background-color:gray">©現在、作り途中です。。。</footer>
