--- a/app/views/dentalnet/result.html.erb
+++ b/app/views/dentalnet/result.html.erb
@@ -1,41 +1,93 @@
 <!--  <p>Hellp World!</p> -->
 <!--  <%= @eva.user_comment %> -->
+<head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<header style="background-color:gray">DELTAL NET</header>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="css/main.css">
+
+</head>
+
+<header>DENTAL NET</header>
+
+<body>
+<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 <div class="container-fluid">
+
   <div class="row">
-    <div class="col-xs-8" style="background-color:red;">DELTAL NOW</div>
-    <div class="col-xs-4" style="background-color:yellow;"><button type="submit" class="btn btn-default">投稿</button></div>
+    <div class="col-xs-12 col-space"></div>
   </div>
 
   <div class="row">
-    <div class="row-height"
-    <div class="col-xs-3 col-height col-top" style="background-color:red;">
-      <label class="checkbox-inline">
-        <a href="#" class="btn btn-default btn-xs active" role="button">トップ</a>
-      </label>
-    </div>
-    
-    <div class="col-xs-3 col-height col-top" style="background-color:blue;">
-      <label class="checkbox-inline">
-        <a href="#" class="btn btn-default btn-xs active" role="button">口コミ</a>
-      </label>
-    </div>
+    <div class="col-xs-3 col-main" style="border-color: blue; background-color: lightblue;">トップ</div>
+    <div class="col-xs-3 col-main" style="border-color: blue; background-color: lightblue;">口コミ</div>
+    <div class="col-xs-3 col-main" style="border-color: blue; background-color: lightblue;">地図</div>
+    <div class="col-xs-3 col-main" style="border-color: blue; background-color: lightblue;">医院詳細</div>
+  </div>
 
-<div class="col-xs-3 col-height col-top" style="background-color:red;">
-      <label class="checkbox-inline">
-        <a href="#" class="btn btn-default btn-xs active" role="button">地図</a>
-      </label>
-    </div>
-    
-    <div class="col-xs-3 col-height col-top" style="background-color:blue;">
-      <label class="checkbox-inline">
-        <a href="#" class="btn btn-default btn-xs active" role="button">医院詳細</a>
-      </label>
-    </div>
- </div>
+  <div class="row">
+    <div class="col-xs-1 col-space"></div>
+    <div class="col-xs-5 col-space">丸橋医院</div>
+    <div class="col-xs-5 col-space">評価：⭐⭐⭐⭐⭐️</div>
+    <div class="col-xs-1 col-space"></div>
+  </div>
 
+  <div class="row">
+    <div class="col-xs-1 col-photo"></div>
+    <div class="col-xs-10 col-photo">写真</div>
+    <div class="col-xs-1 col-photo"></div>
+  </div>
 
-<footer style="background-color:gray">Footer</footer>
+  <div class="row">
+    <div class="col-xs-12">わきあいあいがんばっています！</div>
+  </div>
 
-<i class="fa fa-twitter"></i>
+  <div class="row">
+    <div class="col-xs-12 col-space"></div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12 col-space" style="background-color: darkgoldenrod;">地図</div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-1 col-photo"></div>
+    <div class="col-xs-10 col-photo">写真</div>
+    <div class="col-xs-1 col-photo"></div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-1"></div>
+    <div class="col-xs-10">連絡先情報</div>
+    <div class="col-xs-1"></div>
+  </div>
+
+  <div class="row">
+  <div class="col-xs-12 col-space"></div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12 col-space" style="background-color: darkgoldenrod;">医院詳細</div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-1 col-photo"></div>
+    <div class="col-xs-3 col-photo">写真</div>
+    <div class="col-xs-6 col-photo">コメント</div>
+    <div class="col-xs-1 col-photo"></div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-1"></div>
+    <div class="col-xs-10">得意なジャンル：インプラント</div>
+    <div class="col-xs-1"></div>
+  </div>
+
+</div>
+
+</body>
+
+<footer style="background-color:gray">©現在、作り途中です。。。</footer>
+
