--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -77,3 +77,10 @@ div {
   text-align: center;
 }
 
+.col-map {
+  display:table-cell;
+  width:95%;
+  height:300px;
+  line-height: 300px;
+  text-align: center;
+}
