--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,16 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+<!--Google Map : Start -->
+<script src="//maps.google.com/maps/api/js?v=3.23&key=AIzaSyBXyL22VDcPISvS0SC-ylkv2QMeHAK4NJg"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script>
+    <!-- only if you need custom infoboxes -->
+<!--Google Map : End -->
+
 </head>
 <body>
-
 <%= yield %>
 
 </body>
