--- a/app/views/dentalnet/location.html.erb
+++ b/app/views/dentalnet/location.html.erb
@@ -59,13 +59,15 @@
  height: 30px; background-color: bisque;"></div>
 </div>
 <% end %>
+</div>
 
 <script type="text/javascript">
+
   handler = Gmaps.build('Google');
   handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
     markers = handler.addMarkers([
       {
-        "lat": 35.658689,
+        "lat": 35.69999560000001,
         "lng": 139.697798,
         "infowindow": "テックキャンプ渋谷オフィス",
         mapTypeControl: false
@@ -76,6 +78,7 @@
     handler.getMap().setZoom(16);
   });
 
+document.getElementById( 'result' ).innerHTML = '<dl><dt>緯度</dt><dd>' + lat + '</dd><dt>経度</dt><dd>' + lng + '</dd><dt>高度</dt><dd>' + alt + '</dd><dt>緯度、経度の精度</dt><dd>' + accLatlng + '</dd><dt>高度の精度</dt><dd>' + accAlt + '</dd><dt>方角</dt><dd>' + heading + '</dd><dt>速度</dt><dd>' + speed + '</dd></dl>' ;
 </script>
 
 </body>
