--- a/app/views/dentalnet/comment.html.erb
+++ b/app/views/dentalnet/comment.html.erb
@@ -1,5 +1,3 @@
-<!--  <p>Hellp World!</p> -->
-<!--  <%= @eva.user_comment %> -->
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -23,8 +21,8 @@
   <div class="row">
     <div class="col-xs-1"></div>
     <div class="col-xs-10">
-      <form action="" method="post">
-      <Textarea name="comment" rows="5" cols="35">いかがでしたか？</Textarea>
+      <%= form_tag('/comment', method: :post) do %>
+      <Textarea name="user_comment" rows="5" cols="35">いかがでしたか？</Textarea>
     </div>
     <div class="col-xs-1"></div>
   </div>
@@ -48,7 +46,8 @@
   </div>
 
   <div class="row">
-    <div class="col-xs-12 col-space"><input type="submit" value="投稿"></form>
+    <div class="col-xs-12 col-space"><input type="submit" value="投稿">
+<% end %>
     </div>
   </div>
 
