--- a/app/views/dentalnet/detail_search.html.erb
+++ b/app/views/dentalnet/detail_search.html.erb
@@ -1,5 +1,3 @@
-<!--  <p>Hellp World!</p> -->
-<!--  <%= @eva.user_comment %> -->
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -8,7 +6,7 @@
 
 </head>
 
-<header>DENTAL NET</header>
+<header><a href="/">DENTAL NET</a></header>
 
 <body>
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
@@ -20,158 +18,180 @@
     <div class="col-xs-12 col-space"></div>
   </div>
 
-  <div class="row">
-    <div class="col-xs-1"></div>
-    <div class="col-xs-10">
-      <form action="">
-        <input type="text" class="form-control">
-    </div>
-    <div class="col-xs-1"></div>
-  </div>
+  <form action="/result_category" method="get">
+  <%#= form_tag '/result_category', method: :get %>
+      <div class="row">
+        <div class="col-xs-1"></div>
+        <div class="col-xs-10">
+            <input type="text" class="form-control">
+        </div>
+        <div class="col-xs-1"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12 col-space"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="ceramic" value="0" />
+            <input value='1' name="ceramic" type="checkbox" class="form-control">セラミック
+            <%#= check_box_tag 'ceramic', true, false, {} %>
+        </div>
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+          <input type="hidden" name="waittime" value="0" />
+          <input value='1' name="waittime" type="checkbox" class="form-control">待ち時間が短い
+        </div>
+        <div class="col-xs-2 col-main"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="root" value="0" />
+            <input value='1' name="root" type="checkbox" class="form-control">根管治療
+        </div>
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+          <input type="hidden" name="bridge" value="0" />
+          <input value='1' name="bridge" type="checkbox" class="form-control">ブリッジ
+        </div>
+        <div class="col-xs-2 col-main"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="short" value="0" />
+            <input value='1' name="short" type="checkbox" class="form-control">短期集中
+        </div>
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="whitening" value="0" />
+          <input value='1' name="whitening" type="checkbox" class="form-control">ホワイトニング
+        </div>
+        <div class="col-xs-2 col-main"></div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="second" value="0" />
+            <input value='1' name="second" type="checkbox" class="form-control">セカンドオピニオン
+        </div>
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="cleaning" value="0" />
+          <input value='1' name="cleaning" type="checkbox" class="form-control">クリーニング
+        </div>
+        <div class="col-xs-2 col-main"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="anesthesia" value="0" />
+            <input value='1' name="anesthesia" type="checkbox" class="form-control">麻酔
+        </div>
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="implant" value="0" />
+          <input value='1' name="implant" type="checkbox" class="form-control">インプラント
+        </div>
+        <div class="col-xs-2 col-main"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="correction" value="0" />
+            <input value='1' name="correction" type="checkbox" class="form-control">矯正
+        </div>
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="cosmetic" value="0" />
+          <input value='1' name="cosmetic" type="checkbox" class="form-control">審美
+        </div>
+        <div class="col-xs-2 col-main"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="child" value="0" />
+            <input value='1' name="child" type="checkbox" class="form-control">子供にやさしい
+        </div>
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="denture" value="0" />
+          <input value='1' name="denture" type="checkbox" class="form-control">入れ歯
+        </div>
+        <div class="col-xs-2 col-main"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12 col-space"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="large" value="0" />
+            <input value='1' name="large" type="checkbox" class="form-control">大規模施設
+        </div>
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+          <input type="hidden" name="emergency" value="0" />
+          <input value='1' name="emergency" type="checkbox" class="form-control">急患対応
+        </div>
+        <div class="col-xs-2 col-main"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="visit" value="0" />
+            <input value='1' name="visit" type="checkbox" class="form-control">訪問診療
+        </div>
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="ct" value="0" />
+          <input value='1' name="ct" type="checkbox" class="form-control">CT
+        </div>
+        <div class="col-xs-2 col-main"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+            <input type="hidden" name="online" value="0" />
+            <input value='1' name="online" type="checkbox" class="form-control">オンライン予約
+        </div>
+        <div class="col-xs-2 col-main"></div>
+        <div class="col-xs-3 col-main">
+          <input type="checkbox" class="form-control">
+        </div>
+        <div class="col-xs-2 col-main"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12 col-space"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12 col-space"><input type="submit" value="検索">
+        </div>
+      </div>
+  </form>
+  <%# end %>
 
   <div class="row">
     <div class="col-xs-12 col-space"></div>
   </div>
 
-  <div class="row">
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-        <input name="ceramic" type="checkbox" class="form-control">セラミック
-    </div>
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-      <input name="waitingtime" type="checkbox" class="form-control">待ち時間が短い
-    </div>
-    <div class="col-xs-2 col-main"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-        <input name="root" type="checkbox" class="form-control">根管治療
-    </div>
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-      <input name="bridge" type="checkbox" class="form-control">ブリッジ
-    </div>
-    <div class="col-xs-2 col-main"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-        <input name="short" type="checkbox" class="form-control">短期集中
-    </div>
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-      <input name="whitening" type="checkbox" class="form-control">ホワイトニング
-    </div>
-    <div class="col-xs-2 col-main"></div>
-  </div>
-
-
-  <div class="row">
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-        <input name="second" type="checkbox" class="form-control">セカンドオピニオン
-    </div>
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-      <input name="cleaning" type="checkbox" class="form-control">クリーニング
-    </div>
-    <div class="col-xs-2 col-main"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-        <input name="anesthesia" type="checkbox" class="form-control">麻酔
-    </div>
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-      <input name="implant" type="checkbox" class="form-control">インプラント
-    </div>
-    <div class="col-xs-2 col-main"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-        <input name="denture" type="checkbox" class="form-control">矯正
-    </div>
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-      <input name="cosmetic" type="checkbox" class="form-control">審美
-    </div>
-    <div class="col-xs-2 col-main"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-        <input name="child" type="checkbox" class="form-control">子供にやさしい
-    </div>
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-      <input name="denture" type="checkbox" class="form-control">入れ歯
-    </div>
-    <div class="col-xs-2 col-main"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-12 col-space"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-        <input name="large" type="checkbox" class="form-control">大規模施設
-    </div>
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-      <input name="emergency" type="checkbox" class="form-control">急患対応
-    </div>
-    <div class="col-xs-2 col-main"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-        <input name="visit" type="checkbox" class="form-control">訪問診療
-    </div>
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-      <input name="ct" type="checkbox" class="form-control">CT
-    </div>
-    <div class="col-xs-2 col-main"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-        <input name="online" type="checkbox" class="form-control">オンライン予約
-    </div>
-    <div class="col-xs-2 col-main"></div>
-    <div class="col-xs-3 col-main">
-      <input type="checkbox" class="form-control">
-    </div>
-    <div class="col-xs-2 col-main"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-12 col-space"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-12 col-space"><input type="submit" value="検索"></form>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-12 col-space"></div>
-  </div>
-
-  </div>
-</body>
-
+</div>
 <footer style="background-color:gray">©現在、作り途中です。。。</footer>
+</body>
