--- a/app/views/dentalnet/result_category.html.erb
+++ b/app/views/dentalnet/result_category.html.erb
@@ -32,7 +32,7 @@
     <div class="col-xs-1" style="line-height: 30px;
  height: 30px; background-color: bisque;"></div>
     <div class="col-xs-6" style="line-height: 30px;
- height: 30px; background-color: bisque;"><a href="/dental_detail?dental_id=<%=hospital.dental_id%>"><%=hospital.dental_name%></div>
+ height: 30px; background-color: bisque;"><a href="/dental_detail?id=<%=hospital.id%>"><%=hospital.dental_name%></div>
     <div class="col-xs-2" style="line-height: 30px;
  height: 30px; background-color: bisque;">評価</div>
     <div class="col-xs-2" style="line-height: 30px;
