--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,12 @@
     <!-- only if you need custom infoboxes -->
 <!--Google Map : End -->
 
+
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+ -->
+
+
 </head>
 <body>
 <%= yield %>
