--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
     <!-- only if you need custom infoboxes -->
 <!--Google Map : End -->
 
-
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
- -->
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
 
 
 </head>
